[gd_scene load_steps=5 format=2]

[ext_resource path="res://bean/bean.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://default.theme" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/GameOver:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="World" type="Control"]
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="SurvivedTimeLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_right = 35.0
margin_bottom = 59.0
theme = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoOfBullets" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="HUD"]
pause_mode = 2
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="HUD/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.7103
margin_top = -38.5745
margin_right = 83.2897
margin_bottom = 31.4255
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="HUD/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_bottom = 72.0
rect_scale = Vector2( 2, 2 )
text = "Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="HUD"]
pause_mode = 2
visible = false
modulate = Color( 0.988235, 0.235294, 0.235294, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 17.0
rect_scale = Vector2( 0.983435, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="HUD/GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.0
margin_top = 40.0
margin_right = 190.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD/GameOver/V"]
margin_right = 398.0
margin_bottom = 76.0
size_flags_vertical = 7
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxScoreLabel" type="Label" parent="HUD/GameOver/V"]
margin_top = 80.0
margin_right = 398.0
margin_bottom = 156.0
size_flags_vertical = 7
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="HUD/GameOver/V"]
margin_top = 160.0
margin_right = 398.0
margin_bottom = 237.0
size_flags_vertical = 7
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -12.963
margin_right = 199.0
margin_bottom = 48.037
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="HUD/GameOver/HBoxContainer"]
margin_right = 197.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Retry"

[node name="Exit" type="Button" parent="HUD/GameOver/HBoxContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Exit"

[node name="PauseButton" type="Button" parent="HUD"]
pause_mode = 2
margin_left = 922.825
margin_top = 40.0
margin_right = 1004.82
margin_bottom = 117.0
toggle_mode = true
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 2
position = Vector2( 114, 415 )

[node name="enemies" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PauseTimer" type="Timer" parent="."]

[node name="spawnpoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Position2D" parent="spawnpoints"]
position = Vector2( -116.694, 562.191 )

[node name="SpawnPoint2" type="Position2D" parent="spawnpoints"]
position = Vector2( -86.996, 461.782 )

[node name="SpawnPoint3" type="Position2D" parent="spawnpoints"]
position = Vector2( -71.4396, 350.059 )

[node name="SpawnPoint4" type="Position2D" parent="spawnpoints"]
position = Vector2( -88.4101, 222.78 )

[node name="SpawnPoint5" type="Position2D" parent="spawnpoints"]
position = Vector2( -70.0253, 62.9736 )

[node name="SpawnPoint6" type="Position2D" parent="spawnpoints"]
position = Vector2( 88.3665, -47.335 )

[node name="SpawnPoint7" type="Position2D" parent="spawnpoints"]
position = Vector2( 249.587, -33.1929 )

[node name="SpawnPoint8" type="Position2D" parent="spawnpoints"]
position = Vector2( 402.322, -28.9503 )

[node name="SpawnPoint9" type="Position2D" parent="spawnpoints"]
position = Vector2( 572.027, -38.8498 )

[node name="SpawnPoint10" type="Position2D" parent="spawnpoints"]
position = Vector2( 721.934, -55.8203 )

[node name="SpawnPoint11" type="Position2D" parent="spawnpoints"]
position = Vector2( 890.225, -52.9919 )

[node name="SpawnPoint12" type="Position2D" parent="spawnpoints"]
position = Vector2( 1099.53, -23.2934 )

[node name="SpawnPoint16" type="Position2D" parent="spawnpoints"]
position = Vector2( 8.18567, 670.729 )

[node name="SpawnPoint17" type="Position2D" parent="spawnpoints"]
position = Vector2( 169.406, 684.871 )

[node name="SpawnPoint18" type="Position2D" parent="spawnpoints"]
position = Vector2( 322.141, 689.114 )

[node name="SpawnPoint19" type="Position2D" parent="spawnpoints"]
position = Vector2( 491.847, 679.215 )

[node name="SpawnPoint20" type="Position2D" parent="spawnpoints"]
position = Vector2( 641.753, 662.244 )

[node name="SpawnPoint21" type="Position2D" parent="spawnpoints"]
position = Vector2( 810.045, 665.072 )

[node name="SpawnPoint22" type="Position2D" parent="spawnpoints"]
position = Vector2( 1019.35, 694.771 )

[node name="SpawnPoint13" type="Position2D" parent="spawnpoints"]
position = Vector2( 1096.7, 208.638 )

[node name="SpawnPoint14" type="Position2D" parent="spawnpoints"]
position = Vector2( 1091.04, 488.652 )

[node name="SpawnPoint15" type="Position2D" parent="spawnpoints"]
position = Vector2( 1075.49, 379.757 )

[node name="SpawnPoint23" type="Position2D" parent="spawnpoints"]
position = Vector2( 1152.98, 55.1057 )

[node name="SpawnPoint24" type="Position2D" parent="spawnpoints"]
position = Vector2( 1150.15, 287.037 )

[node name="SpawnPoint25" type="Position2D" parent="spawnpoints"]
position = Vector2( 1144.5, 567.051 )

[node name="SpawnPoint26" type="Position2D" parent="spawnpoints"]
position = Vector2( 1128.94, 458.156 )

[node name="SpawnPoint27" type="Position2D" parent="spawnpoints"]
position = Vector2( -183.365, -73.1837 )

[node name="SpawnPoint28" type="Position2D" parent="spawnpoints"]
position = Vector2( -186.194, 158.747 )

[node name="SpawnPoint29" type="Position2D" parent="spawnpoints"]
position = Vector2( -191.85, 438.762 )

[node name="SpawnPoint30" type="Position2D" parent="spawnpoints"]
position = Vector2( -207.407, 329.867 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 1 )
[connection signal="pressed" from="HUD/MainMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HUD/GameOver/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="HUD/GameOver/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
